ClipIt-1.4.1-20110525002 - 25 May. 2011

	+ Fixed: Numpad keys now work for selecting too.

ClipIt-1.4.1-20110525001 - 25 May. 2011

	+ Fixed: Changed history file to new type.

ClipIt-1.4.1-20110524001 - 24 May. 2011

	+ Fixed: Converted history to new data type.
	+ Fixed: Fixed all of the remaining warnings.

ClipIt-1.4.1-20110523003 - 23 May 2011

	+ Fixed: We are now checking if the history should be saved in the
			save_history function itself.
	+ Fixed: Indicator menu should now refresh even if "Save history"
			is disabled.

ClipIt-1.4.1-20110523002 - 23 May. 2011
	+ Fixed: Unified indicator and systray menu into a single function.

ClipIt-1.4.1-20110523001 - 23 May. 2011
	+ Fixed: Removed some files from git again. You now need to run
			./autogen.sh first when building from git.

ClipIt-1.4.0-20110521002 - 21 May. 2011
	+ Fixed: Fixed wrong selection behaviour in "Manage history" dialog.

ClipIt-1.4.0-20110521001 - 21 May. 2011
	+ Added: We are now using the shipped icon in the systray.

ClipIt-1.4.0-20110520002 - 20 May. 2011
	+ Fixed: Remove duplicate truncate_history functionality.
	+ Added: Added basic history item structure.

ClipIt-1.4.0-20110520001 - 20 May. 2011
	+ Fixed: Deleted items are now properly removed from the history.
	+ Fixed: Double clicking an item in the "Manage history" dialog now
			properly selects it again.
	+ Added: [Enter] (for selecting the item) and [Delete] (for removing
			the item(s)) now works in the "Manage history" dialog.

ClipIt-1.4.0-20110518002 - 18 May. 2011
	+ Added: Also added 1-0 shortcuts to the history menu.

ClipIt-1.4.0-20110518001 - 18 May. 2011
	+ Fixed: Re-enabled indicator support.
	+ Added: We are now installing a sepparate icon for clipit (not using it
			yet, though).
	+ Added: Search as you type in "Manage history" dialog.
	+ Added: 1-0 shortcuts for fast selecting of menu items.
	+ Added: Possiblity to select multiple items for deletion in the
			"Manage history" dialog.
